# cassandraconnectorpkg

./: pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  test.py  tox.ini
.github/workflows/: ci.yaml  python-publish.yaml
casdbops/: cassandra_crud.py
logs_21434359082/: 0_build (ubuntu-latest, 3.7).txt
logs_21434359082/build (ubuntu-latest, 3.7)/: 10_Post Run actions_checkout@v2.txt  11_Complete job.txt  1_Set up job.txt  2_Run actions_checkout@v2.txt  3_Set up Python 3.7.txt  4_Install dependencies.txt  5_Test with tox.txt
